[package]
name = "buttplug-lite"
version = "2.4.1"
authors = ["Runtime's Shady Backroom <76618880+runtime-shady-backroom@users.noreply.github.com>"]
description = "Makes vibrators go brr"
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/runtime-shady-backroom/buttplug-lite"
repository = "https://github.com/runtime-shady-backroom/buttplug-lite"
documentation = "https://github.com/runtime-shady-backroom/buttplug-lite"
keywords = ["vibrator", "buttplug", "control", "bluetooth", "websocket"]
categories = ["hardware-support", "web-programming::http-server", "web-programming::websocket"]

[profile.release]
lto = "thin"

[dependencies]
backtrace = "0.3"
buttplug = { version = "7", default-features = false, features = ["tokio-runtime", "client", "server", "serialize-json", "btleplug-manager", "xinput-manager", "serial-manager", "lovense-dongle-manager", "lovense-connect-service-manager"] } # uses tokio 1
bytes = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] } # drop the "oldtime" feature
directories = "5"
futures = { version = "0.3", default-features = false }
hyper = "0.14"
hyper-timeout = "0.4"
hyper-tls = "0.5"
iced = "0.9"
iced_futures = "0.6"
iced_native = "0.10"
itertools = "0.10"
lazy_static = "1"
open = "4"
semver = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.7"
tracing = "0.1.0"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3" # uses tokio 1
