[package]
name = "buttplug-lite"
version = "2.5.1"
authors = ["Runtime's Shady Backroom <76618880+runtime-shady-backroom@users.noreply.github.com>"]
description = "Makes vibrators go brr"
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/runtime-shady-backroom/buttplug-lite"
repository = "https://github.com/runtime-shady-backroom/buttplug-lite"
documentation = "https://github.com/runtime-shady-backroom/buttplug-lite"
keywords = ["vibrator", "buttplug", "control", "bluetooth", "websocket"]
categories = ["hardware-support", "web-programming::http-server", "web-programming::websocket"]

[profile.release]
lto = "thin" # "fat" made build times extremely slow, so using "thin" as a good compromise. See https://doc.rust-lang.org/cargo/reference/profiles.html#lto

[dependencies]
backtrace = "0.3" # Used by custom panic handler
buttplug = { version = "7", default-features = false, features = ["tokio-runtime", "client", "server", "serialize-json", "btleplug-manager", "xinput-manager", "serial-manager", "lovense-dongle-manager", "lovense-connect-service-manager"] } # Used to connect to buttplugs
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] } # Used to generated timestamp strings for log filenames. Weird features are to intentionally drop the deprecated "oldtime" feature
clap = { version = "4", features = ["derive"] } # Provides command line argument functionality
directories = "5" # Used to get OS-specific directories for storing application files (logs, configs, etc).
futures = { version = "0.3", default-features = false } # Necessary for working with async results.
iced = "0.10" # Provides the GUI
iced_futures = "0.7" # Needed by iced
itertools = "0.13" # Used for duplicate detection in a Vec
lazy_static = "1" # Used to initialize globals at runtime
open = "5" # Used to open application update pages in your browser
reqwest = { version = "0.12", features = ["gzip", "json"] } # HTTP client used by the update checker
semver = "1" # Used for application update checking
serde = "1" # The (de)serialization library
serde_json = "1" # Used to deserialize GitHub API responses (used by application update checker)
tokio = { version = "1", features = ["full"] } # Async runtime
tokio-stream = "0.1" # Used in my iced subscription implementation
toml = "0.8" # Used for configuration file (de)serialization
tracing = "0.1" # Used for logging
tracing-appender = "0.2" # Used for logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Used for logging
warp = "0.3" # Provides the web server
